<resources>
    <string name="app_name">Emex</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="contact_number">Contact Number</string>
    <string name="contact_name">Contact Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_accept">I accept Terms of Service and Privacy Policy</string>
    <string name="max_phone_no_length">10</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="network_view">Network View</string>
    <string name="payment">Payment</string>
    <string name="job_history">Job History</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="support_via">Support via Call/Email</string>
    <string name="missed_jobs">Missed Jobs</string>
    <string name="google_maps_api_key">AIzaSyDaG0IAFzMVb93Q6klmFNm1_n2U4WBeSLw</string>
    <string name="title_location_permission">GPS Permission</string>
    <string name="text_location_permission">GPS is required to be enabled for this section to get your location</string>
    <string name="ok">OK</string>

</resources>
