<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    android:orientation="vertical"
    tools:context="com.example.keshav.emex.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="60dp"
        android:src="@drawable/logo" />

    <EditText
        style="@style/EtTheme"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/icon_email"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <EditText
        style="@style/EtTheme"
        android:layout_marginTop="13dp"
        android:drawableStart="@drawable/icon_password"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        style="@style/btnTheme"
        android:layout_marginTop="10dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/textView"
        style="@style/TvTheme"
        android:text="@string/forgot_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="bottom"
        android:orientation="horizontal">

        <TextView
            style="@style/TvTheme"
            android:layout_width="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="75dp"
            android:paddingEnd="0dp"
            android:text="@string/dont_have_an_account"
            android:textStyle="normal" />

        <TextView
            style="@style/TvTheme"
            android:layout_width="wrap_content"
            android:layout_marginStart="0dp"
            android:paddingEnd="0dp"
            android:text="@string/signup" />
    </LinearLayout>
</LinearLayout>
